--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <img src="images/profile.png" alt="รูปโปรไฟล์" class="profile">
 
-        <h1>นางสาวนิลวรรร พรมมาพงษ์</h1>
+        <h1>นางสาวนิลวรรณ พรมมาพงษ์</h1>
         <h2>สาขาเทคโนโลยีสารสนเทศ</h2>
 
         <p>
