--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <div class="container">
-        <img src="images/profile.png" alt="รูปโปรไฟล์" class="profile">
+        <img src="images/S__4309019.jpg" alt="รูปโปรไฟล์" class="profile">
 
         <h1>นางสาวนิลวรรณ พรมมาพงษ์</h1>
         <h2>สาขาเทคโนโลยีสารสนเทศ</h2>
